fix(style): apply z-index to color palette container

--- a/src/components/NotesForm/NotesForm.css
+++ b/src/components/NotesForm/NotesForm.css
@@ -50,6 +50,7 @@
   position: absolute;
   right: 1.5rem;
   top: 6.5rem;
+  z-index: 2;
   background-color: var(--background-color);
   border-radius: 0.8rem;
   box-shadow: 0 1px 2px 0 rgb(0 0 0 / 60%), 0 2px 6px 2px rgb(0 0 0 / 30%);
